# malachi

./: Cargo.toml  LICENSE  readme.md  syntax.md  tutorial.md
examples/: command_handler.rs
src/: args.rs  ast.rs  benches.rs  compiler.rs  engine.rs  error.rs  errors.rs  lexer.rs  lib.rs  parser.rs  tests.rs
src/args/: arg_match.rs
src/compiler/: tests.rs
src/docs/: args.md
src/engine/: capture.rs  error.rs  list.rs  literal.rs  pattern.rs  segment.rs  specifier.rs  tests.rs
src/lexer/: filter.rs  literal.rs  prelude.rs  string.rs  tests.rs
src/parser/: capture.rs  command.rs  filter.rs  literal.rs  prelude.rs  string.rs  tests.rs
