[package]
name = "malachi"
description = "A domain specific pattern matching language made for defining bot commands."
version = "0.7.3"
edition = "2021"
authors = ["Taylan Gökkaya <insomnimus.dev@gmail.com>"]
keywords = ["regex", "pattern-matching", "bot", "dsl", "discord"]
categories = ["parser-implementations", "text-processing"]
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/insomnimus/malachi"

[dependencies]
nom = "7.1.1"
